projects/vb6parse/snapshots/tests/library/string/ltrim/ltrim_recordset_field.snap
---
source: projects/vb6parse/tests/library/string/ltrim.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: Whitespace
      text: "            "
    - kind: AssignmentStatement
      children:
        - kind: IdentifierExpression
          children:
            - kind: Identifier
              text: customerName
        - kind: Whitespace
          text: " "
        - kind: EqualityOperator
          text: "="
        - kind: Whitespace
          text: " "
        - kind: CallExpression
          children:
            - kind: Identifier
              text: LTrim
            - kind: LeftParenthesis
              text: (
            - kind: ArgumentList
              children:
                - kind: Argument
                  children:
                    - kind: MemberAccessExpression
                      children:
                        - kind: CallExpression
                          children:
                            - kind: MemberAccessExpression
                              children:
                                - kind: Identifier
                                  text: rs
                                - kind: PeriodOperator
                                  text: "."
                                - kind: Identifier
                                  text: Fields
                            - kind: LeftParenthesis
                              text: (
                            - kind: ArgumentList
                              children:
                                - kind: Argument
                                  children:
                                    - kind: StringLiteralExpression
                                      children:
                                        - kind: StringLiteral
                                          text: "\"CustomerName\""
                            - kind: RightParenthesis
                              text: )
                        - kind: PeriodOperator
                          text: "."
                        - kind: Identifier
                          text: Value
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
    - kind: Whitespace
      text: "        "
